bat.bool1.makes10.Makes10.scala.error
Erreur de compilation :
Makes10:6: error: reassignment to val
  } else if (a=10) {
              ^Makes10:8: error: reassignment to val
  } else if (b=10){
              ^